--- a/books/templates/authors/author_confirm_delete.html
+++ b/books/templates/authors/author_confirm_delete.html
@@ -1,7 +1,13 @@
-<h1>Delete Author</h1>
-<p>Are you sure you want to delete "{{ author.name }} {{ author.surname }}"?</p>
-<form method="POST">
-{% csrf_token %}
-<button type="submit">Yes, delete</button>
-</form>
-<a href="{% url 'author_detail' author.pk %}">No, take me back</a>
+{% extends 'base.html' %}
+
+{% block content %}
+    <h1 class="text-center">Delete Author</h1>
+    <div class="alert alert-danger" role="alert">
+        Are you sure you want to delete "{{ author.name }} {{ author.surname }}"?
+    </div>
+    <form method="POST">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-danger">Yes, delete</button>
+    </form>
+    <a href="{% url 'author_detail' author.pk %}" class="btn btn-primary">No, take me back</a>
+{% endblock %}
