--- a/books/templates/authors/author_detail.html
+++ b/books/templates/authors/author_detail.html
@@ -1,2 +1,11 @@
-<h1>{{ author.name }} {{ author.surname }}</h1>
-<p>Thoughts: {{ author.personal_thoughts }}</p>
+{% extends 'base.html' %}
+
+{% block content %}
+    <h1 class="text-center">{{ author.name }} {{ author.surname }}</h1>
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Thoughts:</h5>
+            <p class="card-text">{{ author.personal_thoughts }}</p>
+        </div>
+    </div>
+{% endblock %}
